2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkdialog.c (gtk_dialog_map): Don't loop forever
	here, even if the only focusable widgets are labels.

2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	Support tinting in GtkCellRendererPixbuf (#162903, Jorn Baayen):
	
	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_class_init) 
	Add a follow-state property which when TRUE causes the pixbuf
	to be tinted according to state.

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_render): 
	Use follow-state and colorize the pixbuf when appropriate.	
	
2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	Support wrapping in GtkCellRendererText  (#163608):
	
	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_class_init): 
	Add wrap-mode and wrap-width properties which cause a 
	text cell to break to a specified width when set.

	* gtk/gtkcellrenderertext.c (get_layout): Use wrap-mode
	and wrap-width when they are set.

2005-01-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmodules.c (load_module): Don't reverse the order
	of modules when putting them in gtk_modules.  (#162676, Dennis
	Cranston, patch by Remus Draica)

	* gtk/gtktreeview.c (gtk_tree_view_search_move): Don't crash 
	if the tree is empty.  (#164669, Priit Laes)

Wed Jan 19 18:57:02 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): Call
	GDK_DISPLAY_XDISPLAY with a display, not a window. Clean up the
	function a bit too.

Wed Jan 19 17:17:31 2005  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): Squash
	strict aliasing warning in _NET_VIRTUAL_ROOTS code.

2005-01-19  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkkeys-win32.c (update_keymap,
	gdk_keymap_translate_keyboard_state): Handle keyboards with
	ShiftLock (and not CapsLock) correctly. (#161814)

2005-01-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond):